<resources>
    <string name="app_name">Github User</string>
    <string name="user_name">Username</string>
    <string name="name">User Name</string>
    <string name="searchview_hint">Enter username</string>
    <string name="search">Search</string>
    <string name="followers">Followers</string>
    <string name="following">Followings</string>
    <string name="daftar_tab">Daftar Tab</string>
    <string name="detail_user">Detail User</string>
    <string name="favorite_user">List Favorite User</string>
    <string name="change_mode">Change Mode</string>
    <string name="mode">dark mode</string>
    <string name="github_user">Github User</string>
    <string name="favorite_button">favorite button</string>
    <string name="add_favorite">add favorite</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="remove_from_favorite">remove from favorite</string>
    <string name="share">Share</string>
    <string name="search_user">Search User</string>
    <string name="followers_temp">%1\$s Followers</string>
    <string name="following_temp">%1\$s Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_not_found">Users not Found!</string>
    <string name="follower_is_empty">There are no followers</string>
    <string name="following_is_empty">There are no following</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_not_found">There are no favorite users</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
</resources>