<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        style="@style/LayoutWrapContent"
        android:id="@+id/tv_name"
        android:layout_marginVertical="20dp"
        android:textStyle="bold"
        android:textSize="22sp"
        tools:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/img_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        style="@style/LayoutWrapContent"
        android:id="@+id/tv_username"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/user_name"/>

    <TextView
        style="@style/LayoutWrapContent"
        android:id="@+id/tv_followers"
        android:layout_marginVertical="14dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"/>

    <TextView
        style="@style/LayoutWrapContent"
        android:id="@+id/tv_following"
        android:layout_marginVertical="14dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/following"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

    <com.google.android.material.tabs.TabLayout
        style="@style/LayoutHeightWrap"
        android:id="@+id/tabs"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/daftar_tab"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textAlignment="center"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_favorite"/>

</androidx.constraintlayout.widget.ConstraintLayout>